--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-bootstrap": "^2.10.3",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-router-dom": "^6.24.0",
+    "react-router-dom": "^6.26.1",
     "react-scripts": "5.0.1",
     "stripe": "^16.1.0",
     "styled-components": "^6.1.11",
@@ -47,5 +47,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.41",
+    "tailwindcss": "^3.4.10"
   }
 }
